InProgress #9778 - [Bug] Fix search forms to use in DB search

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -8712,6 +8712,50 @@
 					<field id="fm:commentCount" label="hidden" read-only="true" />
 				</appearance>
 			</form>
+			
+			<form id="filter">
+                <field-visibility>
+                    <show id="bcpg:mblMicrobio" />
+                    <show id="bcpg:mblValue" />
+                     <show id="bcpg:mblMaxi" />
+                    <show id="bcpg:mblType" />
+                    <show id="bcpg:mblMaxi" />
+                    <show id="bcpg:mblControlStep" />
+                    <show id="bcpg:mblMethod" />
+                </field-visibility>
+                <appearance>
+                    <field id="bcpg:mblMicrobio">
+                        <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+                            <control-param name="ds">becpg/autocomplete/microbio</control-param>
+                        </control>
+                    </field>
+                  <field  id="bcpg:mblValue">
+                         <control template="/org/alfresco/components/form/controls/numberrange.ftl">
+                            <control-param name="isSearch">true</control-param>
+                        </control>
+                    </field>
+                    <field id="bcpg:mblType">
+                        <control template="/org/alfresco/components/form/controls/selectmany.ftl">
+                            <control-param name="isSearch">true</control-param>
+                        </control>
+                    </field>
+                     <field id="bcpg:mblControlStep">
+                        <control template="/org/alfresco/components/form/controls/selectmany.ftl">
+                            <control-param name="isSearch">true</control-param>
+                        </control>
+                    </field>
+                      <field  id="bcpg:mblMaxi">
+                         <control template="/org/alfresco/components/form/controls/numberrange.ftl">
+                            <control-param name="isSearch">true</control-param>
+                        </control>
+                    </field>
+                    <field id="bcpg:mblMethod">
+                        <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
+                            <control-param name="ds">becpg/autocomplete/targetassoc/associations/qa:controlMethod</control-param>
+                        </control>
+                    </field>
+                </appearance>
+            </form>
 		</forms>
 	</config>
 	<!-- bcpg:microbioList type (existing nodes) -->
