--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1777,21 +1777,8 @@
 		<forms>
 			<form>
 				<field-visibility>
-					<show id="bcpg:toxIngIng" />
-					<show id="bcpg:toxIngTox" />
 					<show id="bcpg:toxIngSystemicValue" />
-					<show id="bcpg:toxIngMaxValue" />
 				</field-visibility>
-				<appearance>
-					<field id="bcpg:toxIngIng" read-only="true">
-						<control template="/org/alfresco/components/form/controls/autocomplete.ftl" />
-					</field>
-					<field id="bcpg:toxIngTox" read-only="true">
-						<control template="/org/alfresco/components/form/controls/autocomplete.ftl" />
-					</field>
-					<field id="bcpg:toxIngSystemicValue" />
-					<field id="bcpg:toxIngMaxValue" read-only="true" />
-				</appearance>
 			</form>
 
 			<form id="filter">
@@ -1802,20 +1789,26 @@
 					<show id="bcpg:toxIngMaxValue" />
 				</field-visibility>
 				<appearance>
-					<field id="bcpg:toxIngIng" read-only="true">
-						<control template="/org/alfresco/components/form/controls/autocomplete.ftl" />
+					<field id="bcpg:toxIngIng">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:ing
+							</control-param>
+						</control>
 					</field>
-					<field id="bcpg:toxIngTox" read-only="true">
-						<control template="/org/alfresco/components/form/controls/autocomplete.ftl" />
+					<field id="bcpg:toxIngTox">
+						<control template="/org/alfresco/components/form/controls/autocomplete.ftl">
+							<control-param name="ds">becpg/autocomplete/targetassoc/associations/bcpg:tox
+							</control-param>
+						</control>
 					</field>
 
-					<field id="bcpg:toxIngSystemicValue" read-only="true">
+					<field id="bcpg:toxIngSystemicValue">
 						<control template="/org/alfresco/components/form/controls/numberrange.ftl">
 							<control-param name="isSearch">true</control-param>
 						</control>
 					</field>
 
-					<field id="bcpg:toxIngMaxValue" read-only="true">
+					<field id="bcpg:toxIngMaxValue">
 						<control template="/org/alfresco/components/form/controls/numberrange.ftl">
 							<control-param name="isSearch">true</control-param>
 						</control>
@@ -1851,21 +1844,8 @@
 		<forms>
 			<form>
 				<field-visibility>
-					<show id="bcpg:toxIngIng" />
-					<show id="bcpg:toxIngTox" />
 					<show id="bcpg:toxIngSystemicValue" />
-					<show id="bcpg:toxIngMaxValue" />
 				</field-visibility>
-				<appearance>
-					<field id="bcpg:toxIngIng" read-only="true">
-						<control template="/org/alfresco/components/form/controls/autocomplete.ftl" />
-					</field>
-					<field id="bcpg:toxIngTox" read-only="true">
-						<control template="/org/alfresco/components/form/controls/autocomplete.ftl" />
-					</field>
-					<field id="bcpg:toxIngSystemicValue" />
-					<field id="bcpg:toxIngMaxValue" read-only="true" />
-				</appearance>
 			</form>
 		</forms>
 	</config>
@@ -1901,7 +1881,8 @@
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
-					<show id="bcpg:ingToxMaxSkinIrritation" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
 					<show id="bcpg:ingToxMaxSensitization" force="true" />
 					<show id="bcpg:ingToxMaxOcularIrritation" force="true" />
 					<show id="bcpg:ingToxMaxPhototoxic" force="true" />
@@ -1969,15 +1950,8 @@
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
-					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
-					<field id="bcpg:ingToxData" set="toxTab" />
-					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
-					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
-					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
 					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
 					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
 					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
@@ -2011,7 +1985,8 @@
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
-					<show id="bcpg:ingToxMaxSkinIrritation" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
 					<show id="bcpg:ingToxMaxSensitization" force="true" />
 					<show id="bcpg:ingToxMaxOcularIrritation" force="true" />
 					<show id="bcpg:ingToxMaxPhototoxic" force="true" />
@@ -2080,15 +2055,8 @@
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
-					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
-					<field id="bcpg:ingToxData" set="toxTab" />
-					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
-					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
-					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
 					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
 					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
 					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
@@ -2122,7 +2090,8 @@
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
-					<show id="bcpg:ingToxMaxSkinIrritation" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
 					<show id="bcpg:ingToxMaxSensitization" force="true" />
 					<show id="bcpg:ingToxMaxOcularIrritation" force="true" />
 					<show id="bcpg:ingToxMaxPhototoxic" force="true" />
@@ -2191,15 +2160,8 @@
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
-					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
-					<field id="bcpg:ingToxData" set="toxTab" />
-					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
-					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
-					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
 					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
 					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
 					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
@@ -2240,7 +2202,8 @@
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
-					<show id="bcpg:ingToxMaxSkinIrritation" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
 					<show id="bcpg:ingToxMaxSensitization" force="true" />
 					<show id="bcpg:ingToxMaxOcularIrritation" force="true" />
 					<show id="bcpg:ingToxMaxPhototoxic" force="true" />
@@ -2309,15 +2272,8 @@
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
-					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
-					<field id="bcpg:ingToxData" set="toxTab" />
-					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
-					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
-					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
 					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
 					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
 					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
@@ -2352,7 +2308,8 @@
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
-					<show id="bcpg:ingToxMaxSkinIrritation" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
+					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
 					<show id="bcpg:ingToxMaxSensitization" force="true" />
 					<show id="bcpg:ingToxMaxOcularIrritation" force="true" />
 					<show id="bcpg:ingToxMaxPhototoxic" force="true" />
@@ -2420,15 +2377,8 @@
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
-					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
-					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
-					<field id="bcpg:ingToxData" set="toxTab" />
-					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
-					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
-					<field id="bcpg:ingToxMosMoe" set="toxTab" />
-					<field id="bcpg:ingToxMaxSkinIrritation" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
+					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
 					<field id="bcpg:ingToxMaxSensitization" set="toxTab" />
 					<field id="bcpg:ingToxMaxOcularIrritation" set="toxTab" />
 					<field id="bcpg:ingToxMaxPhototoxic" set="toxTab" />
