--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -292,6 +292,9 @@
 					<show id="bcpg:regulatoryCountries" force="true" />
 					<show id="bcpg:regulatoryUsageRef" force="true" />
 				</field-visibility>
+				<appearance>
+					<field id="cm:name" read-only="true"></field>
+				</appearance>
 			</form>
 		</forms>
 	</config>
@@ -1216,6 +1219,9 @@
 					<show id="gs1:platformTermsAndConditionsCode" force="false" />
 
 				</field-visibility>
+				<appearance>
+					<field id="cm:name" read-only="true"></field>
+				</appearance>
 			</form>
 
 			<form id="bulk-edit">
@@ -5297,6 +5303,9 @@
 					<show id="bcpg:locationCountry" force="false" />
 
 				</field-visibility>
+				<appearance>
+					<field id="cm:name" read-only="true"></field>
+				</appearance>
 			</form>
 		</forms>
 	</config>
@@ -5911,6 +5920,9 @@
 					<show force="false" id="bcpg:supplierRefCode" />
 
 				</field-visibility>
+				<appearance>
+					<field id="cm:name" read-only="true"></field>
+				</appearance>
 			</form>
 
 			<form id="search">
@@ -10747,36 +10759,36 @@
 			</form>
 		</forms>
 	</config>
-	
-	
-	
-    <config evaluator="node-type" condition="bcpg:savedSearch">
-        <forms>
-            <form>
-                <field-visibility>
-                    <show id="cm:name" />
-                    <show id="bcpg:isGlobalSavedSearch" />
-                </field-visibility>
-            </form>
-        </forms>
-    </config>
 
-    <config evaluator="model-type" condition="bcpg:savedSearch">
-        <forms>
-            <form>
-                <field-visibility>
-                    <show id="cm:name" />
-                    <show id="bcpg:isGlobalSavedSearch" />
-                </field-visibility>
-            </form>
-            <form id="duplicate">
-                <field-visibility>
-                    <show id="cm:name" />
-                    <show id="bcpg:isGlobalSavedSearch" />
-                </field-visibility>
-            </form>
-        </forms>
-    </config>
+
+
+	<config evaluator="node-type" condition="bcpg:savedSearch">
+		<forms>
+			<form>
+				<field-visibility>
+					<show id="cm:name" />
+					<show id="bcpg:isGlobalSavedSearch" />
+				</field-visibility>
+			</form>
+		</forms>
+	</config>
+
+	<config evaluator="model-type" condition="bcpg:savedSearch">
+		<forms>
+			<form>
+				<field-visibility>
+					<show id="cm:name" />
+					<show id="bcpg:isGlobalSavedSearch" />
+				</field-visibility>
+			</form>
+			<form id="duplicate">
+				<field-visibility>
+					<show id="cm:name" />
+					<show id="bcpg:isGlobalSavedSearch" />
+				</field-visibility>
+			</form>
+		</forms>
+	</config>
 
 	<config evaluator="aspect" condition="bcpg:productTypeAspect">
 		<forms>
