Fix #17824 - [Bug] Fix product specification form and activities

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -8951,6 +8951,7 @@
 			</form>
 			<form id="create-productSpecification">
 				<field-visibility>
+					<show id="bcpg:regulatoryType" force="true" />
 					<show id="bcpg:nutListNut" />
 					<show id="bcpg:nutListMini" />
 					<show id="bcpg:nutListMaxi" />
